# pypes

./: README.md  contributing.html  genindex.html  glossary.html  index.html  modules.html  objects.inv  py-modindex.html  pypes.html  pypes_client.html  pypes_server.html  pyproject.toml  raspberry.html  search.html  searchindex.js  workshop.html
.github/workflows/: docs_pages.yaml
_modules/: index.html
_modules/pypes_client/: chatwin.html  client.html  color.html  cursesclient.html  inputfield.html  main.html  protocol.html
_modules/pypes_server/: main.html  protocol.html  server.html  serverclient.html
_sources/: contributing.rst.txt  index.rst.txt  modules.rst.txt  pypes.rst.txt  pypes_client.rst.txt  raspberry.rst.txt
docs/: Makefile
docs/source/: conf.py  glossary.rst  index.html  index.rst  pypes_server.rst  workshop.rst
docs/source/_static/: main.css
docs/source/_templates/: base.html
docs/source/org/: contributing.org  glossary.org  index.org  (+3 more)
doctrees/: environment.pickle  glossary.doctree  index.doctree  modules.doctree  pypes.doctree  pypes_client.doctree  pypes_server.doctree  raspberry.doctree
html/: .buildinfo  genindex.html  index.html  modules.html  pypes_client.html  pypes_server.html  search.html  searchindex.js
html/_modules/: index.html
html/_sources/: pypes_client.rst.txt  pypes_server.rst.txt
html/_static/: main.css  tooltip.css  tooltip.js
src/pypes_client/: __init__.py  chatwin.py  client.py  cursesclient.py  inputfield.py  main.py  protocol.py  pypes
src/pypes_server/: main.py  protocol.py  server.py  serverclient.py
(+7 files in other folders)
